# ecmwf-utils

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
config/: config.yml  config_ens.yml  config_hres.yml  logging.yml
notebooks/: pilot.ipynb
queries/: default.json  hill-of-towie-2016.json  hill-of-towie-2017.json  hill-of-towie-2018.json  hill-of-towie-2019.json  hill-of-towie-2020.json  hill-of-towie-2021.json  hill-of-towie-2022.json  hill-of-towie-2023.json  hill-of-towie-2024.json  hill-of-towie-full.json  kelmarsh-2016.json  kelmarsh-2017.json  kelmarsh-2018.json  kelmarsh-2019.json  kelmarsh-2020.json  kelmarsh-2021.json  kelmarsh-full.json  penmanshiel-2016.json  penmanshiel-2017.json  penmanshiel-2018.json  penmanshiel-2019.json  penmanshiel-2020.json  penmanshiel-2021.json  penmanshiel-full.json  penmanshiel-small.json
scripts/: run_cost_mapping.py
src/: __main__.py  constants.py  ecmwf_client.py  pipeline.py  query.py  storage.py
src/ecmwf_client_new/: __init__.py  request_builder.py  request_executor.py
src/preprocessing/: __init__.py  main.py
src/setup/: __init__.py  cli.py  config.py  logging.py  prompts.py  query.py
src/setup/config/: __init__.py  defaults.py  loader.py  schema.py
src/utils/: geometry.py
