[tool.poetry]
name = "ecmwf_tools"
version = "0.1.0"
description = ""
authors = ["Jolan <jolan11.dubois@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ecmwf-api-client = "^1.6.5"
ipykernel = "^6.30.1"
xarray = "^2025.9.0"
netCDF4 = "^1.7.2"
scipy = "^1.16.2"
PyYAML = "^6.0.2"
dotenv = "^0.9.9"
folium = "^0.20.0"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
