[project]
name = "aneo-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Jolan"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "ecmwf-api-client (>=1.6.5,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xarray (>=2025.10.1,<2026.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
