[project]
name = "ecmwf-utils"
version = "0.1.0"
description = ""
authors = [
    {name = "JolanDUBOIS",email = "jolan11.dubois@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "xarray (>=2025.11.0,<2026.0.0)",
    "cfgrib (>=0.9.15.1,<0.10.0.0)",
    "eccodes (>=2.44.0,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "ecmwf-api-client (>=1.6.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
